--- a/landing-page/src/index.html
+++ b/landing-page/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./styles/style.css" /> -->
     <title>Odin Project</title>
   </head>
   <body>
@@ -14,9 +13,9 @@
       </div>
       <div class="right">
         <ul class="links">
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
+          <li>link one</li>
+          <li>link two</li>
+          <li>link three</li>
         </ul>
       </div>
     </nav>
@@ -31,7 +30,9 @@
           </h2>
           <button class="btn">Sign up</button>
         </div>
-        <div class="right">this is a place holder for an image</div>
+        <div class="right">
+          <div class="image">this is a place holder for an image</div>
+        </div>
       </div>
     </section>
     <section class="info">
